Setup scenes and Netcode for GameObjects
- Added GameManager for scene loading and game state.
- Implemented PlayerUIManager for network UI management.
- Created TitleScreenUIManager for hosting and game start.
- Configured main menu and game world scenes.
- Integrated Netcode for multiplayer functionality.

--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,14 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+
+# Ignore JetBrains Rider project files and folders
+.idea/
+
+# Exclude .gitattributes and .gitignore from being tracked by Git
+.gitattributes
+.gitignore
+
+# Exclude Visual Studio project files and user settings
+*.csproj.user
+*.csproj
